# Automacao-pje

./: .gitignore  AutomacaoPJE.spec  README.md  README_CODEX.md  pyproject.toml  run.py
PJE_CALC_AUTOMACAO_CODEX_LITE/: CHECKLIST_ACEITE.md  PROMPT_INICIAL_CODEX.md
PJE_CALC_AUTOMACAO_CODEX_LITE/references/: analise_acoes_pje_calc.json  analise_acoes_pje_calc.md  copiar_e_colar_no_pje_calc-2.2.3.xpi
PJE_CALC_AUTOMACAO_CODEX_LITE/references/extension_src/: background.js  content.js  help.html  manifest.json  options.html  options.js
PJE_CALC_AUTOMACAO_CODEX_LITE/spec/: app_config.example.json  excel_mapping.example.json  selectors.template.json  workflow_enriched.json
docs/: MODELO_PLANILHA.md  PLANO_TESTE_COMPLETO_MVP.md
entrega/AutomacaoPJE/: README_USUARIO.md
entrega/AutomacaoPJE_Python/: README.md  requirements.txt
entrega/AutomacaoPJE_Python_atualizado/: AutomacaoPJE.py  Iniciar_AutomacaoPJE.bat
entrega/AutomacaoPJE_Python_rapido/: README.md  requirements.txt
resources/: app_config.default.json  selectors.default.json  selectors.local.json
scripts/: build_exe.ps1  build_python_release.ps1
src/pje_automation/: __init__.py  __main__.py  app.py
src/pje_automation/domain/: execution.py  models.py
src/pje_calc_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_app.py  test_browser.py  test_excel_mapper.py  test_normalization.py  test_output_validation.py  test_resources.py  test_safe_names.py  test_selectors.py  test_workflow.py
tmp_compare/: auto.pjc.inner  auto.txt  orig.pjc.inner  orig.txt
(+56 files in other folders)
