[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pje-calc-automation"
version = "0.1.0"
description = "Automacao local do PJe-Calc com Python e Selenium."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openpyxl>=3.1,<4",
  "selenium>=4.24,<5",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]
build = [
  "pyinstaller>=6.10,<7",
]

[project.scripts]
pje-automation = "pje_automation.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
